test/SemanticAnalysis/Assert/StaticAssertSatisfies.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class A() {
	void method() { }
}

interface B {
	void method();
}

// CHECK-NOT: .loci:13:15: error: static assert predicate evaluates to false
static assert A : B;

// CHECK: .loci:17:15: error: static assert predicate evaluates to false
// CHECK: .loci:17:15: note: because: cannot match incompatible types 'B' and 'A'
static assert B : A;

// CHECK: 1 error generated.
